service-web/src/styles/app.css
body {
    margin: 0;
    outline: none;
    font-family: "Helvetica, Arial,", sans-serif;
    background-color: #fff;
    height: 100%;
    width: 100%;
}

.wrapper-section {
    display: block;
    clear: both;
    padding-right: 300px;
    padding-left: 300px;
}

img {
    max-width: 100%;
}

.google-search-row {
    max-width: 620px;
    width: 100%;
    margin: auto;
    position: relative;
    height: 100vh;
}

.google-search-row .iner-section {
    transform: translateY(-30%);
    position: absolute;
    left: 0;
    right: 0;
    top: 30%;
}

.google-search-row .search-logo {
    display: block;
    text-align: center;
    max-width: 270px;
    margin: 0 auto 35px;
}

.google-search-row .search-bar {
    width: 100%;
    display: block;
}

.search-bar {
    width: 100%;
    display: block;
    /*box-shadow: 0 2px 4px 0 rgba(80,80,82,0.24);*/
    position: relative;
    text-align: left;
    margin: 0;
    padding: 21px 65px 21px 82px;
    height: 48px;
    border-radius: 34px;
    border: solid 1px #c8cbd3;
}

.search-bar .text-field {
    position: absolute;
    top: 5px;
    left: 37px;
    height: 36px;
    width: calc(100% - 100px);
    font-family: Lato-Bold;
    font-size: 16px;
    letter-spacing: 0;
    outline: none;
    border: none;
    line-height: 20px;
    color: #353c52;
    line-height: 1.4px;
    -webkit-appearance: textfield;
}

.search-icon svg {
    fill: #353c52;
}

.search-icon {
    cursor: pointer;
    width: 20px;
    height: 20px;
    color: #353c52;
    position: absolute;
    top: 45%;
    right: 24px;
    transform: translateY(-50%);
}

.search-des {
    font-size: 15px;
    line-height: 16px;
    color: #5c6f84;
    display: block;
    font-family: Lato-Regular;
    margin-top: 26px;
    text-align: center;
    margin-bottom: 34px;
}

/*SearchResultCssLibrary*/
.search-result-header {
    display: flex;
    padding: 20px 140px;
    /* border-bottom: 1px solid #82828245; */
    box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
    position: fixed;
    margin-bottom: 0;
    left: 0;
    right: 0;
    top: 0;
    background: #fff;
    z-index: 5;
}

.wrapper-section.result-wrapper {
    margin-top: 122px;
    padding-left: 311px;
    overflow: hidden;
}

.search-result-header .search-header {
    max-width: 620px;
    width: 100%;
    display: block;
    /* box-shadow: 0 2px 4px 0 rgba(80,80,82,0.24); */
    position: relative;
    text-align: left;
    margin: 0;
    margin-left: 30px;
    transition: all .5s;
    float: left;
}

.search-result-header .header-logo {
    float: left;
    width: 142px;
    /*margin-right: 30px;*/
}

.search-result-header .search-header .text-field {
    position: absolute;
    top: 5px;
    left: 37px;
    height: 36px;
    width: calc(100% - 100px);
    font-family: Lato-Bold;
    font-size: 16px;
    letter-spacing: 0;
    outline: none;
    border: none;
    line-height: 20px;
    color: #353c52;
    line-height: 1.4px;
    -webkit-appearance: textfield;
}

.left-content {
    max-width: 800px;
    width: 100%;
    display: block;
}

.content-row {
    display: block;
    width: 85%;
    margin-bottom: 30px;
}

.heading-title {
    display: block;
    /*margin-bottom: 10px;*/
}

.heading-title a span {
    color: #1b6e3c;
    font-size: 14px;
    font-family: Lato-Regular;
    display: block;
    margin-bottom: 2px;
    word-break: break-all;
}

.heading-title a:hover span {
    text-decoration: none;
}

.heading-title a:hover .link-title {
    text-decoration: underline;
}

.heading-title a:hover {
    text-decoration: none;
}

.heading-title a {
    font-size: 18px;
    font-family: Lato-Bold;
    color: #005cbf;
    text-decoration: none;
}

.description {
    font-size: 15px;
    font-family: Lato-Regular;
    color: #000;
    width: 100%;
}

.pagination-section {
    display: block;
    margin: 50px 0 50px;
}

.pagination-section .pagination {
    justify-content: center;
}

.error-heading-page {
    text-align: center;
    justify-content: center;
    align-items: center;
    line-height: 100vh;
}

.error-heading-page .page-title {
    font-family: Lato-Regular;
    color: #949494;
    font-size: 47px;
}

.inner-content {
    display: flex;
    width: 100%;
}

.content-main {
    max-width: 60%;
    flex: 0 0 60%;
}

.twitter-tweet {
    width: auto !important;
}
.social-heading {
    font-size: 18px;
    font-family: Lato-Bold;
    color: #000;
    display: block;
}
.backArrow{
    display: none;
}
.phoneNumberContainer{
    max-width:85%;
    flex: 0 0 85%;
    padding: 12px;
    margin-top: 12px;
    border:1px solid #dfe1e5;
    border-radius: 25px;
    margin-bottom: 13px;
}
.phoneNumber{
    font-size:32px;
}

.related-keywords{
    margin-bottom: 13px;
    padding:3px;
}

.socials-main{
    display: inline-block;
    padding-right: 10px;
    margin-right: 10px;
}

.someRandomDiv{
    background: #ecffd3;
    padding-right: 15px;
    background-clip: content-box;;
}

@media screen and (max-width: 1920px) {

}

@media screen and (max-width: 1075px) {
    .wrapper-section.result-wrapper {
        padding-left: 283px;
    }
}

@media screen and (max-width: 900px) {
    .wrapper-section.result-wrapper {
        padding-left: 144px;
    }
}
@media screen and (max-width: 767px) {
    .wrapper-section {
        padding: 0 20px;
    }

    .wrapper-section.result-wrapper {
        padding-left: 20px;
    }

    .description {
        width: auto;
    }

    .error-heading-page .page-title {
        font-size: 25px;
    }

    .wrapper-section .google-search-row .search-logo {
        max-width: 200px;
        margin: 0 auto 25px;
    }

    .search-result-header .search-header {
        max-width: none;
    }

    .search-result-header {
        padding: 20px 20px;
        text-align: center;
        align-items: center;
    }

    .search-result-header .header-logo {
        float: none;
        width: 106px;
        margin-right: 0;
        margin-bottom: 0;
    }

    .search-result-header .search-header {
        margin-left: 10px;
    }
}

@media screen and (max-width: 667px) {
    .socials {
        display: none;
    }
    .content-main {
        max-width: 100%;
        flex: 0 0 100%;
    }
    .phoneNumberContainer {
        max-width: 100%;
        flex: 0 0 100%;
    }
    .content-row {
        width: 100%;
    }
}

@media screen and (max-width: 455px) {
    .search-header.on-focus .backArrow{
        width: 19px;
        height: 18px;
        display: inline-block;
        position: absolute;
        left: 9px;
        transform: translateY(-50%);
        top: 50%;
        line-height: normal;
        z-index: 5;
    }
    .onfocus-body .wrapper-section.result-wrapper {
        margin-top: 80px;
    }
    .onfocus-body .logo-google {
        display: none;
    }
    .onfocus-body .search-result-header {
        padding: 0;
    }
    .search-header.on-focus .search-bar{
        border: solid 1px transparent;
        border-radius: 0;
        box-shadow: 0 2px 4px 0 rgba(80,80,82,0.24);
        background: #fff;
    }
    .search-header.on-focus{
        position: absolute;
        top: 17px;
        left: 0;
        -webkit-transform: translateY(-17px);
        transform: translateY(-17px);
        right: 0;
    }
    .wrapper-section.result-wrapper {
        margin-top: 160px;
    }

    .search-result-header .header-logo {
        margin-bottom: 10px;
    }

    .wrapper-section.result-wrapper {
        padding-left: 20px;
    }

    .search-result-header {
        flex-wrap: wrap;
        justify-content: center;

    }

    .description {
        font-size: 13px;
    }

    .heading-title a span {
        font-size: 13px;
    }

    .heading-title a {
        font-size: 16px;
    }

    .search-result-header .search-header {
        margin-left: 0;
    }
}

